New command for bb letters and additions to ff
Commands for all the various blackboard letters defined individually,
for obvious reasons. I'm not sure why it took me this long. Also added
to finite fields definitions, in a generic adding first draft way.
Emphasis on the "first draft" part.

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -7,6 +7,10 @@
 %select dimensions in header
 \bibliographystyle{unsrt}
 
+\newcommand{\Q}{\mathbb{Q}}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\N}{\mathbb{N}}
+\newcommand{\Z}{\mathbb{Z}}
 \newcommand{\fp}[1][p]{\mathbb{F}_{#1}}
 \newcommand{\zn}[1][n]{\mathbb{Z}_{#1}}
 \newcommand{\fpu}[1][p]{\mathbb{F}_{#1}^{\times}}
