Minor revisions and reformatted document
Changed fontsize to meet requirements and made a new contents page. In
terms of formatting, only paragraph widths and other things to do with
geometry need tweaking now. Probably should have done it for this
commit. Oh well.

Also edited ff and rsa slightly, but nothing interesting. Use diff if
you're interested.

Changes to be committed:
	modified:   dissertation.tex
	modified:   finitefieldsdefinitions.tex
	modified:   rsa.tex

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[12pt,titlepage]{article}
 
 \title{Cubic Curves Over Finite Fields}
 \author{Will Bolton}
@@ -22,6 +22,7 @@
 \begin{document}
 \maketitle
 \tableofcontents
+\clearpage
 
 \section{Preamble}
 \subsection{Motivation}
