--- a/LaTeX/rsa.tex
+++ b/LaTeX/rsa.tex
@@ -6,7 +6,10 @@ Now that Lenstra's algorithm has been introduced, we can see a slightly contrive
 Let's see how this would work with an example. Say we knew that
 $$ M = 3103229009940552729864,\quad P = (65537, 3160853182090460427047) $$
 and we wanted to read $M$. If we apply Lenstra's algorithm to $N = 3160853182090460427047$, eventually, with $(3,1)$ as our initial point, the algorithm finds that, with $b = 39850$, adding the two points
-$$(2191801374392476491053, 2332211434379395076998)\ \text{and}\ (406058948051076877967, 3156968592727602662096)$$
+\begin{align*}
+(2191801374392476491053, 2332211434379395076998)\ \text{and}\\
+(406058948051076877967, 3156968592727602662096)
+\end{align*}
 is impossible, since 
 $$2191801374392476491053-406058948051076877967 = 1785742426341399613086$$ and $\gcd(1785742426341399613086, 3160853182090460427047) = 3992747141$. Of course, we don't mind that we can't add the two points, since $3992747141$ is a non-trivial factor of our modulus. A simple division then gives $N = 3992747141 \times 791648724667$. Because we know this is an RSA modulus, we know that this is the complete factorisation of $N$, but for completeness, a simple brute force check quickly shows that $p = 791648724667$ and $q = 3992747141$ are both prime.
 
