--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -27,6 +27,11 @@
 \section{Preamble}
 \subsection{Motivation}
 \input{motivation.tex}
+\cite{silverman-rational}
+\cite{silverman-arithmetic}
+\cite{111-lectures}
+\cite{323-lectures}
+\cite{menezes1996}
 \subsection{Finite Fields}
 \input{finitefieldsdefinitions.tex}
 \subsection{The Projective Plane}
@@ -50,11 +55,6 @@
 
 \appendix
 \section{Code}
-Hmm
-\cite{silverman-rational}
-\cite{silverman-arithmetic}
-\cite{fraleigh2013}
-\cite{goodman1998}
 %\input{appendixcode.tex}
 \lstinputlisting{../../diss-python/pollard.py}
 \bibliography{master.bib}
