--- a/LaTeX/master.bib
+++ b/LaTeX/master.bib
@@ -2,28 +2,38 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Will Bolton at 2015-08-04 11:01:44 +0100 
+%% Created for Will Bolton at 2016-03-14 12:58:00 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@book{fraleigh2013,
-	Author = {Fraleigh, John B},
-	Date-Added = {2015-08-04 10:01:00 +0000},
-	Date-Modified = {2015-08-04 10:01:42 +0000},
-	Publisher = {Pearson Higher Ed},
-	Title = {First Course in Abstract Algebra, A: Pearson New International Edition},
-	Year = {2013}}
+@book{menezes1996,
+	Author = {Menezes, Alfred J and Van Oorschot, Paul C and Vanstone, Scott A},
+	Date-Added = {2016-03-14 12:53:51 +0000},
+	Date-Modified = {2016-03-14 12:55:08 +0000},
+	Publisher = {CRC press},
+	Title = {Handbook of applied cryptography},
+	Year = {1996}}
 
-@book{goodman1998,
-	Author = {Goodman, Frederick M},
-	Date-Added = {2015-08-04 10:00:53 +0000},
-	Date-Modified = {2015-08-04 10:01:23 +0000},
-	Publisher = {Prentice Hall},
-	Title = {Algebra: abstract and concrete},
-	Year = {1998}}
+@misc{323-lectures,
+	Author = {Nadia Mazza},
+	Date-Added = {2016-03-14 12:21:09 +0000},
+	Date-Modified = {2016-03-14 12:22:13 +0000},
+	Howpublished = {Lancaster University Lecture Notes},
+	Month = {October},
+	Title = {MATH323: Elliptic Curves},
+	Year = {2014}}
+
+@misc{111-lectures,
+	Author = {Niels Laustsen},
+	Date-Added = {2016-03-14 12:17:05 +0000},
+	Date-Modified = {2016-03-14 12:20:41 +0000},
+	Howpublished = {Lancaster University Lecture Notes},
+	Month = {October},
+	Title = {MATH111: Numbers and Relations},
+	Year = {2012}}
 
 @book{silverman-rational,
 	Author = {Silverman, Joseph H and Tate, John T},
