New commands, minor edits and more project.t
Added new commands in diss.t for affine space and projective space,
edited gauss.t to reinforce the fact that [] can mean different things,
and wrote and edited projective.t some more.

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -11,6 +11,8 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
+\newcommand{\an}[1][n]{\mathbb{A}^{#1}}
+\newcommand{\pn}[1][n]{\mathbb{P}^{#1}}
 \newcommand{\fp}[1][p]{\mathbb{F}_{#1}}
 \newcommand{\zn}[1][n]{\mathbb{Z}_{#1}}
 \newcommand{\fpu}[1][p]{\mathbb{F}_{#1}^{\times}}
