--- a/LaTeX/gauss.tex
+++ b/LaTeX/gauss.tex
@@ -73,7 +73,10 @@ $$\fp = \{0\} \cup R \cup S \cup T$$
 Notice that $\#R = \#S = \#T = m$. Since $-1=(-1)^3$, $-1 \in R$ and $R = -R$, which implies that $S=-S$ and $T=-T$.
 Now that we have our partition of $\fp$, we can reason about $M_p$, the object of interest in this proof. First, though, we introduce an important new notation. For $X,Y,Z \subset \fp$:
 $$[X,Y,Z] = \#(x,y,z) : x\in X,\quad y\in Y,\quad z\in Z\quad \& \quad x+y+z=0$$
-For simplicity, we will sometimes write $[XYZ]$ instead of $[X,Y,Z]$. The symbol $[]$ has a number of useful properties, such as:
+For simplicity, we will sometimes write $[XYZ]$ instead of $[X,Y,Z]$.
+Note that this is different to writing homogenous coordinates in the projective plane!
+
+The symbol $[]$ has a number of useful properties, such as:
 \begin{align*}
 	[XY(Z\cup W)] &= [XYZ] + [XYW]\quad \si Z\cap W = \emptyset\\
 	[XYZ] &= [aX, aY, aZ]\quad \for a\neq0\\
