--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -1,25 +1,10 @@
-\documentclass[12pt,titlepage]{article}
+\documentclass[a4paper,12pt,titlepage,oneside]{article}
 
 \title{Cubic Curves Over Finite Fields}
 \author{Will Bolton}
 \date{\today}
-\input{header.tex}
-%select dimensions in header
 \bibliographystyle{unsrt}
-
-\newcommand{\Q}{\mathbb{Q}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Z}{\mathbb{Z}}
-\newcommand{\an}[1][n]{\mathbb{A}^{#1}}
-\newcommand{\pn}[1][n]{\mathbb{P}^{#1}}
-\newcommand{\fp}[1][p]{\mathbb{F}_{#1}}
-\newcommand{\zn}[1][n]{\mathbb{Z}_{#1}}
-\newcommand{\fpu}[1][p]{\mathbb{F}_{#1}^{\times}}
-\newcommand{\for}{\text{for }}
-\newcommand{\si}{\text{if }}
-\newcommand{\pai}{\mathcal{O}}
-\newcommand{\galt}[1]{{#1}_{\ast}} % alternate characters for gauss proof
+\input{header.tex}
 
 \begin{document}
 \maketitle
