Expand bibliography and change structure in diss.t
There are a few, minor edits to diss.t that are listed now.

- Change the bibliography style from unsrt to abbrv, for better sorting
- Condense nocite commands into special nocite, which is better for
  generality
- Rename the three sections
- Slight rearrangement of inputs

For the bibliography, a couple of typos are fixed (mainly concerned with
capital letters) and new entries added.

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -3,7 +3,7 @@
 \title{Cubic Curves Over Finite Fields}
 \author{Will Bolton}
 \date{\today}
-\bibliographystyle{unsrt}
+\bibliographystyle{abbrv}
 \input{header.tex}
 
 \begin{document}
@@ -11,27 +11,24 @@
 \tableofcontents
 \clearpage
 
-\section{Preamble}
+\section{Prerequisites}
 \subsection{Motivation}
 \input{motivation.tex}
-\cite{silverman-rational}
-\cite{silverman-arithmetic}
-\cite{111-lectures}
-\cite{323-lectures}
-\cite{menezes1996}
+\nocite{*}
 \subsection{Finite Fields}
 \input{finitefieldsdefinitions.tex}
 \subsection{The Projective Plane}
 \input{projectivedefinitions.tex}
 \subsection{Elliptic Curves}
 \input{ellipticdefinitions.tex}
+
+\section{Theory}
+\subsection{Elliptic Curves Over Finite Fields}
+\subsection{The Number of Points on an Elliptic Curve}
 \input{h-w.tex}
 \input{gauss.tex}
-
-\section{Algorithms}
-\subsection{Modular Exponentiation}
-\input{modexalgorithm.tex}
 \subsection{Lenstra's Algorithm}
+\input{modexalgorithm.tex}
 \input{lenstraalgorithm.tex}
 
 \section{Discussion}
