--- a/LaTeX/master.bib
+++ b/LaTeX/master.bib
@@ -2,12 +2,65 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Will Bolton at 2016-03-14 12:58:00 +0000 
+%% Created for Will Bolton at 2016-03-21 15:53:03 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{hasse1936c,
+	Author = {Hasse, Helmut},
+	Date-Added = {2016-03-21 15:20:35 +0000},
+	Date-Modified = {2016-03-21 15:33:25 +0000},
+	Journal = {Journal f{\"u}r die reine und angewandte Mathematik},
+	Pages = {193--208},
+	Title = {{Zur Theorie der abstrakten elliptischen Funktionenk{\"o}rper III. Die Struktur des Meromorphismenrings. Die Riemannsche Vermutung.}},
+	Volume = {175},
+	Year = {1936}}
+
+@article{hasse1936b,
+	Author = {Hasse, Helmut},
+	Date-Added = {2016-03-21 15:20:28 +0000},
+	Date-Modified = {2016-03-21 15:33:17 +0000},
+	Journal = {Journal f{\"u}r die reine und angewandte Mathematik},
+	Pages = {69--88},
+	Title = {{Zur Theorie der abstrakten elliptischen Funktionenk{\"o}rper II. Automorphismen und Meromorphismen. Das Additionstheorem.}},
+	Volume = {175},
+	Year = {1936}}
+
+@article{hasse1936a,
+	Author = {Hasse, Helmut},
+	Date-Added = {2016-03-21 15:20:24 +0000},
+	Date-Modified = {2016-03-21 15:33:01 +0000},
+	Journal = {Journal f{\"u}r die reine und angewandte Mathematik},
+	Pages = {55--62},
+	Title = {{Zur Theorie der abstrakten elliptischen Funktionenk{\"o}rper I. Die Struktur der Gruppe der Divisorenklassen endlicher Ordnung.}},
+	Volume = {175},
+	Year = {1936}}
+
+@article{schoof1995,
+	Author = {Schoof, Ren{\'e}},
+	Date-Added = {2016-03-21 14:26:46 +0000},
+	Date-Modified = {2016-03-21 14:26:54 +0000},
+	Journal = {Journal de th{\'e}orie des nombres de Bordeaux},
+	Number = {1},
+	Pages = {219--254},
+	Title = {Counting points on elliptic curves over finite fields},
+	Volume = {7},
+	Year = {1995}}
+
+@article{wiles1995,
+	Author = {Wiles, Andrew},
+	Date-Added = {2016-03-18 16:15:15 +0000},
+	Date-Modified = {2016-03-18 16:17:24 +0000},
+	Journal = {Annals of mathematics},
+	Number = {3},
+	Pages = {443--551},
+	Publisher = {JSTOR},
+	Title = {Modular elliptic curves and Fermat's last theorem},
+	Volume = {141},
+	Year = {1995}}
 
 @book{menezes1996,
 	Author = {Menezes, Alfred J and Van Oorschot, Paul C and Vanstone, Scott A},
@@ -38,9 +91,9 @@
 @book{silverman-rational,
 	Author = {Silverman, Joseph H and Tate, John T},
 	Date-Added = {2015-07-01 23:33:54 +0000},
-	Date-Modified = {2015-07-01 23:34:44 +0000},
+	Date-Modified = {2016-03-21 14:28:05 +0000},
 	Publisher = {Springer Science \& Business Media},
-	Title = {Rational points on elliptic curves},
+	Title = {Rational Points on Elliptic Curves},
 	Year = {2013}}
 
 @book{silverman-arithmetic,
