Tweaked appendix settings in diss and header

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -37,9 +37,9 @@
 \subsection{Elliptic Curve Cryptography}
 \input{ecc.tex}
 
+\clearpage
 \appendix
 \section{Code}
-%\input{appendixcode.tex}
 \lstinputlisting{../../diss-python/pollard.py}
 \bibliography{master.bib}
 \end{document}
