--- a/LaTeX/header.tex
+++ b/LaTeX/header.tex
@@ -79,14 +79,14 @@
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
 % Define other settings for listings appendix. Taken from tex.sx, I think
-\lstset{frame=tb,
+\lstset{frame=none,
   language=Python,
-  aboveskip=3mm,
-  belowskip=3mm,
+  aboveskip=0pt,
+  belowskip=0pt,
   showstringspaces=false,
   columns=flexible,
   basicstyle={\small\ttfamily},
-  numbers=none,
+  numbers=left,
   numberstyle=\tiny\color{gray},
   keywordstyle=\color{blue},
   commentstyle=\color{dkgreen},
