New page per section and small additions
As suggested, diss.t reformatted to start a new page for each full
section. Also filled empty subsection with a new input, initialised with
lipsum, as was the previously blank ecc.

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -21,23 +21,26 @@
 \input{projectivedefinitions.tex}
 \subsection{Elliptic Curves}
 \input{ellipticdefinitions.tex}
+\clearpage
 
 \section{Theory}
 \subsection{Elliptic Curves Over Finite Fields}
+\input{finiteelliptic.tex}
 \subsection{The Number of Points on an Elliptic Curve}
 \input{h-w.tex}
 \input{gauss.tex}
 \subsection{Lenstra's Algorithm}
 \input{modexalgorithm.tex}
 \input{lenstraalgorithm.tex}
+\clearpage
 
 \section{Discussion}
 \subsection{Example RSA Decryption}
 \input{rsa.tex}
 \subsection{Elliptic Curve Cryptography}
 \input{ecc.tex}
-
 \clearpage
+
 \appendix
 \section{Code}
 \lstinputlisting{../../diss-python/pollard.py}
