--- a/LaTeX/master.bib
+++ b/LaTeX/master.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Will Bolton at 2016-03-21 15:53:03 +0000 
+%% Created for Will Bolton at 2016-03-22 15:07:45 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{miranda1995,
+	Author = {Miranda, Rick},
+	Date-Added = {2016-03-22 15:06:31 +0000},
+	Date-Modified = {2016-03-22 15:06:41 +0000},
+	Publisher = {American Mathematical Soc.},
+	Title = {Algebraic curves and Riemann surfaces},
+	Volume = {5},
+	Year = {1995}}
 
 @article{hasse1936c,
 	Author = {Hasse, Helmut},
@@ -88,18 +97,18 @@
 	Title = {MATH111: Numbers and Relations},
 	Year = {2012}}
 
-@book{silverman-rational,
+@book{tate2013,
 	Author = {Silverman, Joseph H and Tate, John T},
 	Date-Added = {2015-07-01 23:33:54 +0000},
-	Date-Modified = {2016-03-21 14:28:05 +0000},
+	Date-Modified = {2016-03-22 15:07:32 +0000},
 	Publisher = {Springer Science \& Business Media},
 	Title = {Rational Points on Elliptic Curves},
 	Year = {2013}}
 
-@book{silverman-arithmetic,
+@book{silverman2009,
 	Author = {Silverman, Joseph H},
 	Date-Added = {2015-07-01 23:30:38 +0000},
-	Date-Modified = {2015-07-01 23:36:36 +0000},
+	Date-Modified = {2016-03-22 15:07:03 +0000},
 	Edition = {2nd},
 	Isbn = {9780387094946},
 	Lccn = {2009926474},
